Added Processed time,orphan and getAT() in Process Created class Process Scheduler initial (structure of it) Move file loading to Process sheduler

--- a/Process_Scheduler.vcxproj
+++ b/Process_Scheduler.vcxproj
@@ -132,9 +132,11 @@
     <ClInclude Include="PriNode.h" />
     <ClInclude Include="PriQueue.h" />
     <ClInclude Include="Process.h" />
+    <ClInclude Include="ProcessSch.h" />
     <ClInclude Include="QueueADT.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ProcessSch.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
