--- a/Process_Scheduler.vcxproj
+++ b/Process_Scheduler.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DEFS.h" />
+    <ClInclude Include="FCFS_Processor.h" />
     <ClInclude Include="LinkedQueue.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="PriNode.h" />
@@ -137,6 +138,8 @@
     <ClInclude Include="QueueADT.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="FCFS.cpp" />
+    <ClCompile Include="Process.cpp" />
     <ClCompile Include="Processor.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
