--- a/Process_Scheduler.vcxproj
+++ b/Process_Scheduler.vcxproj
@@ -137,12 +137,14 @@
     <ClInclude Include="Processor.h" />
     <ClInclude Include="ProcessSch.h" />
     <ClInclude Include="QueueADT.h" />
+    <ClInclude Include="RR_Processor.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="FCFS.cpp" />
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="Processor.cpp" />
     <ClCompile Include="ProcessSch.cpp" />
+    <ClCompile Include="RR_Processor.cpp" />
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
