--- a/Process_Scheduler.vcxproj.filters
+++ b/Process_Scheduler.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClInclude Include="RR_Processor.h">
       <Filter>Processor</Filter>
     </ClInclude>
+    <ClInclude Include="SJF_Processor.h">
+      <Filter>Processor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
@@ -54,6 +57,9 @@
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="ProcessSch.cpp" />
     <ClCompile Include="RR_Processor.cpp">
+      <Filter>Processor</Filter>
+    </ClCompile>
+    <ClCompile Include="SJF_Processor.cpp">
       <Filter>Processor</Filter>
     </ClCompile>
   </ItemGroup>
